--- a/BeerApp-master/beer.css
+++ b/BeerApp-master/beer.css
@@ -138,12 +138,11 @@ li {
 
 }
 
-#btnSearch:focus {
+/* #btnSearch:focus {
     transition: all 1s ease;
-    background-color: #84CEC0;
+    background-color: #84cec000;
     color: #fff;
-    border: none;
-}
+} */
 
 #food { 
     /* background-color: rgba(160, 160, 160, 0.479); */
